src/test/ui/old-suffixes-are-really-forbidden.stderr
error: invalid suffix `is` for integer literal
  --> $DIR/old-suffixes-are-really-forbidden.rs:2:13
   |
LL |     let a = 1_is;
   |             ^^^^ invalid suffix `is`
   |
   = help: the suffix must be one of the integral types (`u32`, `isize`, etc)

error: invalid suffix `us` for integer literal
  --> $DIR/old-suffixes-are-really-forbidden.rs:3:13
   |
LL |     let b = 2_us;
   |             ^^^^ invalid suffix `us`
   |
   = help: the suffix must be one of the integral types (`u32`, `isize`, etc)

error: aborting due to 2 previous errors

